[package]
name = "ezroutes-derive"
version = "0.1.1"
edition = "2024"
description = "Procedural macro for ezroutes"
license = "MIT"
repository = "https://github.com/Samujalphukan228/ezroutes"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"