[package]
name = "ezroutes"
version = "0.1.0"
edition = "2024"
description = "Zero-boilerplate Axum route definitions with middleware support"
license = "MIT"
repository = "https://github.com/Samujalphukan228/ezroutes"
keywords = ["axum", "routes", "middleware", "web", "http"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
ezroutes-derive = "0.1.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }